# mingty-fastweb

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/v1/: user.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
