[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls" , "mysql", "macros" ] }
serde = { version = "1.0.145", features = ["derive"] }
actix-web = "4"